# task-manager-service

./: CMakeLists.txt  main.cpp
bcrypt/: bcrypt.h
include/: instance_holder.h
include/builder/: project_dto_builders.h  task_dto_builders.h
include/controllers/: project_controllers.h  task_controllers.h  user_controllers.h
include/dto/: comment_dto.h  project_dto.h  tag_dto.h  task_dto.h  user_dto.h
include/jwt/: jwt_handler.h  user_claims.h
include/repositories/: comment_repository.h  project_repository.h  tag_repository.h  task_repository.h  user_repository.h
include/services/: comment_service.h  notification_service.h  project_service.h  tag_service.h  task_service.h  user_service.h
include/sql/: sqlite3_handler.h
include/utilities/: http_client.h  utility.h
src/: instance_holder.cpp
src/builders/: project_dto_builders.cpp  task_dto_builders.cpp
src/controllers/: comment_controllers.cpp  project_controllers.cpp  tag_controllers.cpp  task_controllers.cpp  user_controllers.cpp
src/dto/: comment_dto.cpp  project_dto.cpp  tag_dto.cpp  task_dto.cpp  user_dto.cpp
src/jwt/: jwt_handler.cpp  user_claims.cpp
src/repositories/: comment_repository.cpp  project_repository.cpp  tag_repository.cpp  task_repository.cpp  user_repository.cpp
src/services/: comment_service.cpp  notification_service.cpp  project_service.cpp  tag_service.cpp  task_service.cpp  user_service.cpp
src/sql/: sqlite3_handler.cpp
src/utilities/: http_client.cpp  utility.cpp
